<resources>
    <string name="app_name">HomeworkIV</string>
    <string name="changeWallpaper">Change Wallpaper</string>
    <string name="changeYBR">Change Background Color</string>
    <string name="wallpaperA">Wallpaper A</string>
    <string name="wallpaperB">Wallpaper B</string>
    <string name="wallpaperC">Wallpaper C</string>
    <string name="yellow">Yellow</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
</resources>
